# RSS_MSU_forward_operator

./: .gitignore  open_questions.md  readme.md
RSS_MSU_forward_operator/: MSU_forward_operator.py  access_atmosphere_2005_msu_monthly.py  check_model_data.py  era5.py  process_monthly_msu.py
RSS_MSU_forward_operator/example_data/2D/2020/: era5_GEO_2D_360_181_2020_01.nc  era5_GEO_2D_360_181_2020_02.nc  era5_GEO_2D_360_181_2020_03.nc  era5_PS_2D_360_181_2020_01.nc  era5_PS_2D_360_181_2020_02.nc  era5_PS_2D_360_181_2020_03.nc  era5_SeaIce_2D_360_181_2020_01.nc  era5_SeaIce_2D_360_181_2020_02.nc  era5_SeaIce_2D_360_181_2020_03.nc  era5_T2m_2D_360_181_2020_01.nc  era5_T2m_2D_360_181_2020_02.nc  era5_T2m_2D_360_181_2020_03.nc  era5_TDew_2D_360_181_2020_01.nc  era5_TDew_2D_360_181_2020_02.nc  era5_TDew_2D_360_181_2020_03.nc  era5_TPW_2D_360_181_2020_01.nc  era5_TPW_2D_360_181_2020_02.nc  era5_TPW_2D_360_181_2020_03.nc  era5_TSkin_2D_360_181_2020_01.nc  era5_TSkin_2D_360_181_2020_02.nc  era5_TSkin_2D_360_181_2020_03.nc  era5_W10_2D_360_181_2020_01.nc  era5_W10_2D_360_181_2020_02.nc  era5_W10_2D_360_181_2020_03.nc  era5_land_frac_2D_360_181_2020_01.nc  era5_land_frac_2D_360_181_2020_02.nc  era5_land_frac_2D_360_181_2020_03.nc
RSS_atmos_rtm/: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  pyproject.toml
RSS_atmos_rtm/python/rss_atmos_rtm/: access_atmosphere.pyi
RSS_atmos_rtm/src/: error.rs  lib.rs  rtm.rs
RSS_atmos_rtm/src/rtm/: core.rs  liquid_cloud.rs  oxygen.rs  tests.rs  water_vapor.rs
RSS_surface_emissivity/RSS_surface_emissivity/src/geomod10/: geomod10py.f90
